# opengalaxy

./: .clang-format  .clang-tidy  .gitignore  ABOUT_DIALOG_COMPARISON.md  ABOUT_DIALOG_INFO.md  ABOUT_DIALOG_UPDATES.md  BUGS_FIXED_STATUS.md  BUG_FIXES.md  BUILD.md  BUILD_CONFIGURATION_FIX.md  CHANGELOG.md  CI_CD_ARCHITECTURE_SUPPORT.md  CI_CD_FIX_SUMMARY.md  CMakeLists.txt  CODE_FORMATTING_FIX.md  COMMIT_MESSAGE.txt  COMMIT_NOW.md  COMMIT_READY.md  COMPATIBILITY_GUIDE.md  COMPLETE_SUMMARY.md  CONNECTION_CLOSED_FIX.md  CONTRIBUTING.md  COVER_IMAGE_FIX.md  COVER_IMAGE_FIX_SUMMARY.md  CRASH_FIX_2026-01-23.md  CROSS_PLATFORM_ICONS.md  DOWNLOAD_IMPROVEMENTS.md  FINAL_ICON_ABOUT_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  FIRST_COMMIT.md  FIXES_2026-01-23.md  ICON_AND_ABOUT_IMPLEMENTATION.md  ICON_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INSTALL_DIRECTORY_FIX.md  ISSUES_TO_FIX.md  LICENSE  LOGIN_ERROR_FIX_V2.md  LOGIN_FIX.md  (+26 more)
.github/workflows/: code-quality.yml  multi-platform-build.yml  release.yml
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/opengalaxy/api/: gog_client.h  models.h  session.h
core/include/opengalaxy/install/: install_service.h  installer_detector.h
core/include/opengalaxy/net/: http_client.h
core/include/opengalaxy/runners/: dosbox_manager.h  dosbox_runner.h  runner.h  runner_manager.h
core/include/opengalaxy/util/: config.h  dos_detector.h  log.h  result.h
core/src/api/: gog_client.cpp  session.cpp
core/src/install/: install_service.cpp  installer_detector.cpp
core/src/net/: http_client.cpp
core/src/runners/: dosbox_manager.cpp  dosbox_runner.cpp  proton_discovery.cpp  proton_discovery.h  proton_runner.cpp  proton_runner.h  runner.cpp  runner_manager.cpp  wine_runner.cpp  wine_runner.h  wrapper_runner.cpp  wrapper_runner.h
core/src/util/: config.cpp  dos_detector.cpp  log.cpp
data/: generate_icons.sh  opengalaxy.rc
docs/: ARCHITECTURE.md  ARCHITECTURE_DETECTION.md  BUILD.md  BUILD_FIXES.md  CHANGELOG.md  CI_CD_ARCHITECTURE_SUPPORT.md  CI_CD_FINAL_STATUS.md  CI_CD_FIXES_SUMMARY.md  CI_CD_FIX_SUMMARY.md  CI_CD_PIPELINE.md  CI_CD_SUCCESS_SUMMARY.md  CI_CD_WORKFLOW_FIX.md  CODE_QUALITY_QUICK_REFERENCE.md  CONFIGURATION.md  CROSS_PLATFORM_CONFIG_SUMMARY.md  DATA_LOCATIONS.md  DEPENDENCIES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  DOS_GAMES_SUPPORT.md  FEATURES_STATUS.md  FUTURE_FEATURES.md  GAME_TWEAKS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALLATION_PROCESS.md  ISA_TRANSLATION.md  LINK_SYSTEMS.md  MISSING_FEATURES.md  MULTILINGUAL_GUIDE.md  MULTI_ARCH_SUPPORT.md  QUICKSTART.md  README.md  RUNNER_AUTO_DETECTION.md  TESTING.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CI.md  WINE_PROTON_COMPARISON.md  (+3 more)
tests/: CMakeLists.txt  api_tests.cpp  core_tests.cpp  download_tests.cpp  mock_http_client.h  network_tests.cpp  runner_tests.cpp  update_tests.cpp
ui/: CMakeLists.txt
ui/qt/: CMakeLists.txt  app_window.cpp  app_window.h  main.cpp
ui/qt/dialogs/: cloud_saves_dialog.cpp  cloud_saves_dialog.h  game_details_dialog.cpp  game_details_dialog.h  game_information_dialog.cpp  game_information_dialog.h  oauth_login_dialog.cpp  oauth_login_dialog.h
ui/qt/i18n/: translation_manager.cpp  translation_manager.h
ui/qt/models/: library_model.cpp  library_model.h
ui/qt/pages/: friends_page.cpp  friends_page.h  library_page.cpp  library_page.h  login_page.cpp  login_page.h  settings_page.cpp  settings_page.h  store_page.cpp  store_page.h
ui/qt/resources/: opengalaxy.desktop  resources.qrc
ui/qt/resources/i18n/: opengalaxy_en_US.ts
ui/qt/resources/styles/: dark_theme.qss
ui/qt/widgets/: game_card.cpp  game_card.h  notification_widget.cpp  notification_widget.h
